== 3.1.7 2011-05-?
* Support regular AR models having one or many composite models (Jacques Fuentes)

== 3.1.6 2011-04-03
* Updated belongs_to association to be a bit more flexible with non-CPK
  base models (Jacques Fuentes)
* Fix uniqueness check (David Rueck)
* Fix write issue when one of they keys in a composite key is
  called id (Tom Hughes)

== 3.1.5 2011-03-24
* Fix simple calculation methods
* Fix instantiation of cpk records via associations.
* Fix Relation#delete
* Fix Relation#destroy

== 3.1.4 2011-03-06
* Support ActiveRecord 3.0.5 (interpolate_sql was removed and
  replaced by interpolate_and_sanitize_sql)
* Fix persistence methods to support destroy callbacks
* Support rake 0.9.0 beta


== 3.1.2 2011-02-26
* Add back in support for find('3,3') which makes it possible to
  do find(params[id]).  This implementation is simpler than earlier version
  improving code readability.
* Support for finding multiple records either via find([1,2], [3,4])
* Remove to_composite_ids method which is no longer needed


== 3.1.1 2011-02-07
* Implement id_before_type_cast (Jason Lewis)
* Add in tests for Model.includes(:other_model)
* Fix object comparison with nil in composite primary keys (StackNG)
* Make it easier to run tests with different database adapters (Toby Cabot)
* Fix AssociationReflection#primary_key_name for polymorphic relationships (Dave Doan)


== 3.1.0 2010-12-17
* Add back in rake test tasks (Toby Cabot)
* Add support for multiple string composite keys (wouter)
* Remove support for find('3,3').  Instead use find([3,3])


== 3.0.9 2010-12-04
* Fix up support for composite key fixtures.


== 3.0.8 2010-12-04
* Fix for translation issue in unique validation.  Thanks to Daniel Berger for the patch.
* Fix to support child classes of composite primary key models


== 3.0.7 2010-11-29
* Fix has and belongs to many associations implementation.


== 3.0.6 2010-11-29  (yanked)
* Add full support for has and belongs to many associations.

