@@ -1,5 +1,8 @@
 == 3.1.7 2011-05-?
 * Support regular AR models having one or many composite models (Jacques Fuentes)
+* Minor test cleanup
+* Make version requirements more explicit
+* Remove Arel extensions used for calculations
 
 == 3.1.6 2011-04-03
 * Updated belongs_to association to be a bit more flexible with non-CPK
